src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>TotalStudents__c</fullName>
        <label>Total Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TwoMoreRacesStudents__c</fullName>
        <label>Two/More Races Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniversityPresident__c</fullName>
        <label>University President</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UrbanCentricLocale__c</fullName>
        <label>Urban - Centric Locale</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WGUCreatedDate__c</fullName>
        <description>Date the record was created by WGU (typically from legacy CRM)</description>
        <label>WGU Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WGUPlacesStudents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean value that determines if WGU should place students for Practical Clinical Experience (PCE) for all schools in this district.</description>
        <inlineHelpText>Should WGU place PCE students for all schools in this district (vs. self serve)?</inlineHelpText>
        <label>WGU Places Students</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WhiteStudents__c</fullName>
        <label>White Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isInvalid__c</fullName>
        <description>If this person account dont have contact or its contact associate with other account</description>
        <formula>( (RecordType.DeveloperName ==&apos;StudentRecord&apos; || RecordType.DeveloperName ==&apos;ProspectRecord&apos; || RecordType.DeveloperName ==&apos;AlumniRecord&apos; ) &amp;&amp; StudentContact__c != null &amp;&amp; StudentContact__r.AccountId!=null &amp;&amp; StudentContact__r.AccountId !=  Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPersonAccount__c</fullName>
        <formula>CASE( StudentContact__c, null, 0 , 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isPersonAccount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllDistricts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>NumberOfSchools__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>WGUPlacesStudents__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.District</value>
        </filters>
        <label>All Districts</label>
        <sharedTo>
            <group>FieldExperiences</group>
            <group>TeacherLicensure</group>
            <group>TeacherSuccess</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllSchoolsK12</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>SchoolDistrict__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>WGUPlacesStudents__c</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>IsPublicOrPrivate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.SchoolK12</value>
        </filters>
        <label>All Schools (K-12)</label>
        <sharedTo>
            <group>FieldExperiences</group>
            <group>TeacherLicensure</group>
            <group>TeacherSuccess</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>College_Discounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ExemptionCode__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ActiveDiscount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.InstitutionOfHigherEd</value>
        </filters>
        <filters>
            <field>ActiveDiscount__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Bursar - College Discounts</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Bursar</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>BursarManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DistrictsWGUPlacesSchoolsforPCE</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>WGUPlacesStudents__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>NumberOfSchools__c</columns>
        <columns>ACCOUNT.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.District</value>
        </filters>
        <filters>
            <field>WGUPlacesStudents__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Districts - WGU Places Schools for PCE</label>
        <sharedTo>
            <group>FieldExperiences</group>
            <group>TeacherLicensure</group>
            <group>TeacherSuccess</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LRVendors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>AccountEmail__c</columns>
        <columns>SecondaryEmail__c</columns>
        <columns>IPED__c</columns>
        <columns>ACCOUNT.URL</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.LearningResourcesVendor</value>
        </filters>
        <label>LR Vendors</label>
        <sharedTo>
            <group>SRMSupport</group>
            <roleAndSubordinatesInternal>LearningResourcesManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TeacherLicensureStatesandPrograms</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>AccountEmail__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.TeacherLicensureStatesandPrograms</value>
        </filters>
        <label>Teacher Licensure States and Programs</label>
        <sharedTo>
            <group>TeacherLicensure</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>allbusiness_accounts</fullName>
        <columns>ExemptionCode__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>DiscountAmount__c</columns>
        <columns>NumberDiscountedTerms__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.BusinessAccount</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Employer</value>
        </filters>
        <filters>
            <field>ActiveDiscount__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Bursar - Corporate Discounts</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Bursar</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>BursarManager</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <namedFilters>
        <fullName>Account_00N30000009PpjzEAC</fullName>
        <active>true</active>
        <errorMessage>District value does not exist or does not match filter criteria.</errorMessage>
        <field>Account.SchoolDistrict__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>District</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Account_School District</name>
    </namedFilters>
    <namedFilters>
        <fullName>Case_00Na0000009Sn2pEAC</fullName>
        <active>true</active>
        <field>Case.Vendor__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business Account, Learning Resources Vendor, District, School (K-12), Teacher Licensure States and Programs</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Case_Vendor</name>
    </namedFilters>
    <namedFilters>
        <fullName>Contact_00NQ0000000wBGkMAM</fullName>
        <active>true</active>
        <field>Contact.District__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>District</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Contact_District</name>
    </namedFilters>
    <namedFilters>
        <fullName>Contact_00NQ0000000wBGpMAM</fullName>
        <active>true</active>
        <field>Contact.School__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>School (K-12)</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Contact_School</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I30000001tC6REAU_00N30000009R7YUEA0</fullName>
        <active>false</active>
        <field>StudentAttributes__c.StudentAccount__c</field>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>true</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Student Attributes_Student Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I30000001tm6fEAA_00Na0000009SlNzEAK</fullName>
        <active>true</active>
        <field>Cohort__c.CohortHospital__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business Account</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Cohort_Cohort Hospital</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I30000001tsu2EAA_00N30000009R7ZAEA0</fullName>
        <active>true</active>
        <field>StudentTranscript__c.TranscriptInstitution__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Institution of Higher Ed</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Student Transfer Institution_Transcript</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IQ00000004yEuMAI_00NQ0000000vWgyMAE</fullName>
        <active>false</active>
        <field>FieldExperience__c.PlacedSchool__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>School (K-12)</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Field Experience_School</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IQ00000004yEuMAI_00NQ0000000w599MAA</fullName>
        <active>false</active>
        <field>FieldExperience__c.PlacedDistrict__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>District</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Field Experience_District</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IS00000004txJMAQ_00NS00000012oPkMAI</fullName>
        <active>true</active>
        <field>FieldExperienceProcess__c.District__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>District</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Field Experiences Process_District</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IS00000004txJMAQ_00NS00000012oPrMAI</fullName>
        <active>true</active>
        <field>FieldExperienceProcess__c.School__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>School (K-12)</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Field Experiences Process_School</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IS00000004uDTMAY_00NS00000012sqnMAA</fullName>
        <active>true</active>
        <field>MethodOfPayment__c.Student__c</field>
        <filterItems>
            <field>Account.StudentContact__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Method of Payment_Student</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IS00000004v5XMAQ_00NS000000136IpMAI</fullName>
        <active>true</active>
        <field>StudentEmploymentHistory__c.Employer__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business Account</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Employer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Student Employment History_Employer</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Ia0000001u8DWEAY_00Na0000009SsBnEAK</fullName>
        <active>true</active>
        <field>LearningResourceAccessInstructions__c.Vendor__c</field>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Learning Resources Vendor</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Learning Resource Access Instructions_Ve</name>
    </namedFilters>
    <recordTypes>
        <fullName>AlumniRecord</fullName>
        <active>true</active>
        <description>For non-Person Account Student Alumni</description>
        <label>AlumniRecord</label>
    </recordTypes>
    <recordTypes>
        <fullName>BusinessAccount</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>District</fullName>
        <active>true</active>
        <description>School District</description>
        <label>District</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthFacility</fullName>
        <active>true</active>
        <description>Record type used for a Health Facility</description>
        <label>Health Facility</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthNetwork</fullName>
        <active>true</active>
        <description>Record type used for a Health Network</description>
        <label>Health Network</label>
    </recordTypes>
    <recordTypes>
        <fullName>InstitutionOfHigherEd</fullName>
        <active>true</active>
        <description>General Institution Type</description>
        <label>Institution of Higher Ed</label>
    </recordTypes>
    <recordTypes>
        <fullName>LearningResourcesVendor</fullName>
        <active>true</active>
        <description>Learning Resources Vendor Account</description>
        <label>Learning Resources Vendor</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProctorAccount</fullName>
        <active>true</active>
        <description>Record Type used for the Proctor Accounts</description>
        <label>Proctor Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProspectRecord</fullName>
        <active>true</active>
        <description>For non-Person Account Student Prospects</description>
        <label>ProspectRecord</label>
    </recordTypes>
    <recordTypes>
        <fullName>SchoolK12</fullName>
        <active>true</active>
        <description>A K-12 School</description>
        <label>School (K-12)</label>
    </recordTypes>
    <recordTypes>
        <fullName>StudentRecord</fullName>
        <active>true</active>
        <description>For non-Person Account Student Records</description>
        <label>StudentRecord</label>
    </recordTypes>
    <recordTypes>
        <fullName>TeacherLicensureStatesandPrograms</fullName>
        <active>true</active>
        <description>Record type to group interactions between Teacher Licensure and the states</description>
        <label>Teacher Licensure States and Programs</label>
    </recordTypes>
    <validationRules>
        <fullName>ChangeBusinessAccountName</fullName>
        <active>false</active>
        <description>Validate user credential before changing an Account Name</description>
        <errorConditionFormula>IF(AND( ISCHANGED(Name), OR($User.ProfileId &lt;&gt; &quot;00e30000001k9gx&quot;, $User.ProfileId &lt;&gt; &quot;00e30000001Ypdt&quot;)), true, false)</errorConditionFormula>
        <errorMessage>You are trying to modify the name of a record managed by IT. If you are trying to update a student record, please contact your team lead for assistance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECInstitutionOfHigherEdNameChange</fullName>
        <active>true</active>
        <description>Rule to make sure that EC&apos;s are not the one that is changing the account name for Institutions of Higher Ed.</description>
        <errorConditionFormula>IF(AND( ISCHANGED(Name), $User.ProfileName__c = &apos;Enrollment Team&apos;, RecordType.Name = &apos;Institution of Higher Ed&apos; ), true, false)</errorConditionFormula>
        <errorMessage>In order to change the name of an Institution of Higher Ed, please contact your supervisor.</errorMessage>
    </validationRules>
</CustomObject>